--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dom": "^0.0.3",
     "emailjs-com": "^3.2.0",
     "motion": "^12.23.12",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
