--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "dom": "^0.0.3",
     "emailjs-com": "^3.2.0",
+    "gsap": "^3.13.0",
     "motion": "^12.23.12",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
